# giomkt

./: .env.example  .gitignore  TODO.md  estudo_migracao_dash_flask.md  openapi.yaml  pyproject.toml
.claude/: settings.local.json
app/: config.py  database.py  layout.py  main.py
app/assets/: style.css
app/pages/: ai_assistant.py  alert_rules.py  alerts_list.py  analytics.py  client_form.py  dashboard.py  eduzz_accounts.py  goals.py  labels.py  message_flows.py  notes.py  reports.py  sales.py  settings_whatsapp.py  tasks.py  today.py  upcoming.py  webhooks.py
app/services/: ai_parser.py  eduzz.py  eduzz_webhooks.py  facebook.py  nlp_task.py  umami.py  whatsapp.py
backend/: .env  pyproject.toml
backend/app/: __init__.py  config.py  database.py  layout.py  main.py
backend/app/api/: ai_assistant.py  alerts.py  analytics.py  campaigns.py  clients.py  dashboard.py  eduzz.py  goals.py  labels.py  message_flows.py  notes.py  products.py  sales.py  services.py  settings.py  tasks.py  webhooks.py
backend/app/assets/: style.css
backend/app/pages/: campaigns.py  client_view.py  clients.py  products.py  sales.py  services.py  today.py  wiki.py
backend/app/services/: ai_assistant.py  ai_parser.py  alerts.py  eduzz.py
backend/data/: giomkt.db  whatsapp_settings.json
data/: giomkt.db
frontend/: next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/components/: sidebar.tsx
frontend/hooks/: use-ai-assistant.ts  use-alerts.ts  use-analytics.ts  use-campaigns.ts  use-clients.ts  use-dashboard.ts  use-eduzz.ts  use-fetch.ts  (+10 more)
(+36 files in other folders)
